@startuml

title __REPRESENTATION3D's Class Diagram__\n

  namespace enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance {
    namespace SimEntity.Robot {
      namespace Representation3D {
        interface enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Robot.Representation3D.IRobot3D {
            {abstract} + attach3DRepresentation()
            {abstract} + canSeeBadRobot()
            {abstract} + getColor()
            {abstract} + getLineOfSightBadRobot()
            {abstract} + getSize()
            {abstract} + getType()
            {abstract} + isAlive()
        }
      }
    }
  }
  

  namespace enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance {
    namespace SimEntity.Robot {
      namespace Representation3D {
        class enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Robot.Representation3D.RobotRepresentation3D {
            - bounds : ArrayList<Bounds>
            - currentLineOfSights : HashMap<String, Cylinder>
            - edges : HashMap<String, Cylinder>
            - gridMaterial : PhongMaterial
            - highlightedEdges : ArrayList<Cylinder>
            - knownPoints : HashMap<Point3D, Box>
            - monRobot : Group
            - myworld : Group
            + RobotRepresentation3D()
            + attachEdge()
            + attachGrid()
            + clearHiglightedEdges()
            + getBounds()
            + getGraphicNodes()
            + highlightPath()
            + init()
            + update()
            - initBounds()
            - updateLineOfSightBadRobot()
        }
      }
    }
  }
  

  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Robot.Representation3D.RobotRepresentation3D -up-|> enstabretagne.monitor.implementation.Representation3D
  enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Robot.Representation3D.RobotRepresentation3D o-- enstabretagne.travaux_diriges.TD_corrige.MouvementCollisionAvoidance.SimEntity.Robot.Representation3D.IRobot3D : robot3D


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
